@@ -1,3 +1,7 @@
+2003-11-21  Per Bothner  <per@bothner.com>
+
+	* IntegerRange.java (integerRange):  If M > N then M to N is now empty.
+
 2003-11-14  Per Bothner  <per@bothner.com>
 
 	* StringValue.java (concat$V):  New method.
